# hipSYCL

./: CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: linux-acppllvm.yml  linux-lit.yml  linux-self-hosted.yml  linux.yml  macos-acppllvm.yml  macos-metal.yml  macos.yml  prime-docker.yml  windows-acppllvm.yml  windows.yml
.github/workflows/create-ci-docker/: AdaptiveCpp-CI-Linux.dockerfile  action.yml
cmake/: FindCUDA.cmake
doc/: accessor-variants.md  algorithms.md  architecture.md  compilation.md  deployment.md  enqueue-custom-operation.md  env_variables.md  extensions.md  generic-sscp.md  index.md  install-cuda.md  install-llvm.md  install-metal.md  install-ocl.md  install-rocm.md  installing.md  macros.md  pcuda.md  performance.md  scoped-parallelism.md  stdpar.md  using-acpp.md
doc/stylesheets/: extra.css
examples/: CMakeLists.txt
include/hipSYCL/algorithms/: algorithm.hpp  numeric.hpp
include/hipSYCL/common/: appdb.hpp  debug.hpp  dylib_loader.hpp  export.hpp  filesystem.hpp  settings.hpp  small_vector.hpp  stable_running_hash.hpp  unordered_dense.hpp
include/hipSYCL/compiler/: CompilationState.hpp  Frontend.hpp  GlobalsPruningPass.hpp
include/hipSYCL/glue/: reflection.hpp
include/hipSYCL/pcuda/: cuda.h  cuda_runtime.h  pcuda.hpp  pcuda_runtime.hpp
include/hipSYCL/runtime/: backend.hpp  dag_manager.hpp  device_id.hpp  error.hpp  hardware.hpp  hints.hpp  inorder_queue.hpp  kernel_cache.hpp  kernel_configuration.hpp  settings.hpp
include/hipSYCL/sycl/: backend.hpp  buffer.hpp  context.hpp  device.hpp  event.hpp  exception.hpp  extensions.hpp  handler.hpp  jit.hpp  kernel.hpp  pcuda_interop.hpp  platform.hpp  program.hpp  queue.hpp  (+3 more)
src/: CMakeLists.txt
src/common/: CMakeLists.txt  appdb.cpp  dylib_loader.cpp  filesystem.cpp  settings.cpp
src/compiler/: AdaptiveCppClangPlugin.cpp  AdaptiveCppLlvmPasses.cpp  CMakeLists.txt  GlobalsPruningPass.cpp
src/compiler/cbs/: IRUtils.cpp  SubCfgFormation.cpp  VectorShape.cpp
src/compiler/frontend/: AdaptiveCppClangPlugin.cpp
src/compiler/llvm-to-backend/: AddressSpaceInferencePass.cpp  CMakeLists.txt  GlobalSizesFitInI32OptPass.cpp  KnownPtrParamAlignmentOptPass.cpp  LLVMToBackend.cpp  Utils.cpp
src/compiler/llvm-to-backend/amdgpu/: LLVMToAmdgpu.cpp
src/compiler/llvm-to-backend/host/: HostKernelWrapperPass.cpp  LLVMToHost.cpp  StaticLocalMemoryPass.cpp
src/compiler/llvm-to-backend/metal/: Emitter.cpp  Emitter.hpp  HLExtractionPass.cpp  HLExtractionPass.hpp  HLTree.cpp  HLTree.hpp  LLVMToMetal.cpp  LLVMToMetalTool.cpp
src/compiler/llvm-to-backend/ptx/: LLVMToPtx.cpp
src/compiler/llvm-to-backend/spirv/: LLVMToSpirv.cpp
src/compiler/reflection/: FunctionNameExtractionPass.cpp  IntrospectStructPass.cpp
src/compiler/sscp/: AggregateArgumentExpansionPass.cpp  DeviceAssertPass.cpp  DynamicFunctionSupport.cpp  HostKernelNameExtractionPass.cpp  KernelOutliningPass.cpp  StdAtomicRemapperPass.cpp  StdBuiltinRemapperPass.cpp  TargetSeparationPass.cpp
src/compiler/sscp/pcuda/: ExternDynamicLocalMemoryPass.cpp  FreeKernelCall.cpp  StaticLocalMemoryPass.cpp
src/compiler/stdpar/: SyncElision.cpp
src/libkernel/sscp/: CMakeLists.txt
src/libkernel/sscp/amdgpu/: CMakeLists.txt  assert.cpp  barrier.cpp  collpredicate.cpp  native.cpp
src/libkernel/sscp/host/: CMakeLists.txt  assert.cpp  barrier.cpp  localmem.cpp  math.cpp  native.cpp  print.cpp
src/libkernel/sscp/metal/: CMakeLists.txt  assert.cpp  atomic.cpp  barrier.cpp  broadcast.cpp  collpredicate.cpp  core.cpp  half.cpp  helpers.hpp  integer.cpp  localmem.cpp  math.cpp  native.cpp  print.cpp  reduction.cpp  scan_exclusive.cpp  scan_helpers.hpp  scan_inclusive.cpp  shuffle.cpp  shuffle_helpers.hpp  subgroup.cpp
src/libkernel/sscp/ptx/: CMakeLists.txt  assert.cpp  atomic.cpp  barrier.cpp  native.cpp
src/libkernel/sscp/spirv/: CMakeLists.txt  assert.cpp  barrier.cpp  native.cpp
src/runtime/: CMakeLists.txt  adaptivity_engine.cpp  backend_loader.cpp  dag_direct_scheduler.cpp  dag_manager.cpp  dag_submitted_ops.cpp  kernel_cache.cpp  kernel_configuration.cpp  settings.cpp
src/runtime/cuda/: cuda_allocator.cpp  cuda_hardware_manager.cpp  cuda_queue.cpp
src/runtime/hip/: hip_hardware_manager.cpp  hip_queue.cpp
src/runtime/metal/: metal_allocator.cpp  metal_backend.cpp  metal_code_object.cpp  metal_event.cpp  metal_hardware_manager.cpp  metal_queue.cpp
src/runtime/ocl/: ocl_backend.cpp  ocl_code_object.cpp  ocl_hardware_manager.cpp  ocl_queue.cpp
src/runtime/omp/: omp_allocator.cpp  omp_backend.cpp  omp_code_object.cpp  omp_hardware_manager.cpp  omp_phys_mem.cpp  omp_queue.cpp
src/runtime/pcuda/: pcuda_device_topology.cpp  pcuda_error.cpp  pcuda_event.cpp  pcuda_runtime.cpp  pcuda_runtime_api.cpp  pcuda_stream.cpp  pcuda_thread_state.cpp
src/runtime/support/: minicoro_wrapper.cpp  reflection.cpp
src/runtime/ze/: ze_code_object.cpp  ze_hardware_manager.cpp  ze_queue.cpp
src/tools/: CMakeLists.txt
src/tools/acpp-hcf-tool/: CMakeLists.txt
src/tools/acpp-info/: CMakeLists.txt  acpp-info.cpp
src/tools/acpp-pcuda-pp/: CMakeLists.txt  acpp-pcuda-pp.cpp
tests/: CMakeLists.txt  device_compilation_tests.cpp
tests/compiler/: CMakeLists.txt  lit.cfg.py
tests/pcuda/: atomic.cpp  device_query.cpp  event.cpp  interop.cpp  memory.cpp  pcuda_test_suite.cpp  stream.cpp
tests/platform_api/: api_test.cpp
tests/pstl/: count.cpp  count_if.cpp  equal.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  is_sorted.cpp  is_sorted_until.cpp  max_element.cpp  min_element.cpp  mismatch.cpp  remove.cpp  remove_copy.cpp  remove_copy_if.cpp  remove_if.cpp  reverse.cpp  reverse_copy.cpp  transform_reduce.cpp
tests/runtime/: device_manager.cpp
tests/sycl/: accessor.cpp  atomic.cpp  atomic_ref.cpp  buffer.cpp  explicit_copy.cpp  extensions.cpp  fill.cpp  half.cpp  id_range.cpp  info_queries.cpp  interop_handle.cpp  item.cpp  kernel_invocation.cpp  marray.cpp  math.cpp  multi_ptr.cpp  profiler.cpp  queue.cpp  reduction.cpp  reference_semantics.cpp  relational.cpp  sub_group.cpp  sycl_test_suite.hpp  usm.cpp  vec.cpp
(+154 files in other folders)
